# pictwar-online

./: Cargo.toml  Dockerfile  README.MD  diesel.toml
migrations/2024-12-14-044950_create_users/: up.sql
migrations/2024-12-14-111037_add_column_to_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/controllers/: user_controller.rs
src/models/: users.rs
src/routes/: home.rs  mod.rs  routes.rs  users.rs
src/services/: user_service.rs
src/tests/: user_routes.rs
src/utils/: db.rs
